tests/invalid/DefiniteAssign_Invalid_4.whiley
method f(any _this) :
    debug _this

method g() :
    f(x)
